--- a/app/views/layouts/admin/admin.html.erb
+++ b/app/views/layouts/admin/admin.html.erb
@@ -1,5 +1,8 @@
 <%= content_for(:content) do %>
-  <div class="container-fluid main">
+  <!-- navbar -->
+  <%= render '/shared/admin/navbar' %>
+
+  <div class="container-fluid">
     <!-- Flash -->
     <div class="row">
       <div class="col-sm-12">
