--- a/app/views/layouts/admin/base.html.erb
+++ b/app/views/layouts/admin/base.html.erb
@@ -1,5 +1,5 @@
 <!DOCTYPE html>
-<html>
+<html lang="zh-CN">
   <head>
     <meta charset="utf-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
@@ -7,25 +7,23 @@
     <meta name="renderer" content="webkit">
     <meta name="viewport" content="width=device-width, initial-scale=1">
 
-    <title>Lgg_cms - <%= t(:app_title) %></title>
-
+    <title>Lgg_cms - admin control</title>
     <%= csrf_meta_tags %>
     <%= csp_meta_tag %>
 
-    <%= stylesheet_link_tag    'admin/base', media: 'all', 'data-turbolinks-track': 'reload' %>
-    <%= javascript_include_tag 'admin/base', 'data-turbolinks-track': 'reload' %>
-
-    <!--[if lte IE 9]>
-    <script src="//cdn.bootcss.com/respond.js/1.4.2/respond.min.js"></script>
-    <script src="//cdn.bootcss.com/html5shiv/3.7.3/html5shiv.min.js"></script>
-    <![endif]-->
+    <%= stylesheet_link_tag 'admin/base' %>
 
     <%= yield(:head) %>
+    <!-- HTML5 shim and Respond.js for IE8 support of HTML5 elements and media queries -->
+    <!-- WARNING: Respond.js doesn't work if you view the page via file:// -->
+    <!--[if lt IE 9]>
+      <script src="https://oss.maxcdn.com/html5shiv/3.7.3/html5shiv.min.js"></script>
+      <script src="https://oss.maxcdn.com/respond/1.4.2/respond.min.js"></script>
+    <![endif]-->
   </head>
 
-  <body class="<%= body_class %>">
-
+  <body>
     <%= yield(:content) %>
-
+    <%= javascript_include_tag 'admin/base' %>
   </body>
 </html>
