--- a/app/views/shared/admin/_navbar.html.erb
+++ b/app/views/shared/admin/_navbar.html.erb
@@ -29,16 +29,26 @@
       </ul>
 
       <ul class="nav navbar-nav navbar-right">
-        <li class="dropdown">
-          <a href="#" class="dropdown-toggle" data-toggle="dropdown" role="button" aria-haspopup="true" aria-expanded="false">Dropdown <span class="caret"></span></a>
-          <ul class="dropdown-menu">
-            <li><a href="#">Action</a></li>
-            <li><a href="#">Another action</a></li>
-            <li><a href="#">Something else here</a></li>
-            <li role="separator" class="divider"></li>
-            <li><a href="#">Logout</a></li>
-          </ul>
-        </li>
+        <% unless user_signed_in? %>
+          <li>
+            <%= link_to fa_icon('sign-in', text: 'Sign in'), '/sign_in' %>
+          </li>
+        <% else %>
+          <li class="dropdown">
+            <a href="#" class="dropdown-toggle" data-toggle="dropdown" role="button" aria-haspopup="true" aria-expanded="false"><%= fa_icon 'user', text: current_user&.username %> <span class="caret"></span></a>
+            <ul class="dropdown-menu">
+              <li><a href="#">Action</a></li>
+              <li><a href="#">Another action</a></li>
+              <li><a href="#">Something else here</a></li>
+              <li role="separator" class="divider"></li>
+              <li>
+                <%= link_to destroy_session_path(current_user), data: { method: :delete } do %>
+                  <%= fa_icon "sign-out", text: "Sign out" %>
+                <% end %>
+              </li>
+            </ul>
+          </li>
+        <% end %>
       </ul>
     </div><!-- /.navbar-collapse -->
   </div><!-- /.container-fluid -->
