--- a/app/views/layouts/admin/base.html.erb
+++ b/app/views/layouts/admin/base.html.erb
@@ -13,7 +13,7 @@
 
     <%= stylesheet_link_tag 'admin/base' %>
 
-    <%= yield(:head) %>
+    <%= yield(:css) %>
     <!-- HTML5 shim and Respond.js for IE8 support of HTML5 elements and media queries -->
     <!-- WARNING: Respond.js doesn't work if you view the page via file:// -->
     <!--[if lt IE 9]>
@@ -25,5 +25,6 @@
   <body>
     <%= yield(:content) %>
     <%= javascript_include_tag 'admin/base' %>
+    <%= yield(:js) %>
   </body>
 </html>
