--- a/app/views/shared/admin/_navbar.html.erb
+++ b/app/views/shared/admin/_navbar.html.erb
@@ -37,9 +37,12 @@
           <li class="dropdown">
             <a href="#" class="dropdown-toggle" data-toggle="dropdown" role="button" aria-haspopup="true" aria-expanded="false"><%= fa_icon 'user', text: current_user&.username %> <span class="caret"></span></a>
             <ul class="dropdown-menu">
-              <li><a href="#">Action</a></li>
-              <li><a href="#">Another action</a></li>
-              <li><a href="#">Something else here</a></li>
+              <li>
+                <%= link_to fa_icon('user', text: 'categories'), admin_categories_path %>
+              </li>
+              <li>
+                <%= link_to fa_icon('user', text: 'articles'), admin_articles_path %>
+              </li>
               <li role="separator" class="divider"></li>
               <li>
                 <%= link_to destroy_session_path(current_user), data: { method: :delete } do %>
