--- a/app/assets/stylesheets/admin/base.scss
+++ b/app/assets/stylesheets/admin/base.scss
@@ -7,3 +7,8 @@
 @import "/bootstrap-theme.min";
 @import "font-awesome";
 @import "/**/*";
+
+.admin-footer {
+  padding: 50px 0 50px 0;
+  margin-top: 100px;
+}
