--- a/app/views/admin/articles/index.html.erb
+++ b/app/views/admin/articles/index.html.erb
@@ -1,6 +1,6 @@
 <h1>Articles</h1>
 
-<%= link_to 'new', new_admin_article_path, class: 'btn btn-info' %>
+<%= link_to 'new', new_admin_article_path, class: 'btn btn-primary' %>
 
 <table class="table table-hover">
   <thead>
@@ -15,9 +15,12 @@
     <% @articles.each do |article| %>
       <tr>
         <td><%= article.id %></td>
-        <td><%= article.title %></td>
+        <td><%= link_to article.title, [:admin, article] %></td>
         <td><%= article.created_at %></td>
-        <td>a</td>
+        <td>
+          <%= link_to 'edit', [:edit, :admin, article], class: 'btn btn-info' %>
+          <%= link_to 'delete', [:admin, article], data: { method: :delete, confirm: 'Are you sure?' }, class: 'btn btn-danger' %>
+        </td>
       </tr>
     <% end %>
   </tbody>
