--- a/app/views/admin/categories/index.html.erb
+++ b/app/views/admin/categories/index.html.erb
@@ -1,6 +1,6 @@
 <h1>Categories</h1>
 
-<%= link_to 'new', new_admin_category_path, class: 'btn btn-info' %>
+<%= link_to 'new', new_admin_category_path, class: 'btn btn-primary' %>
 
 <table class="table table-hover">
   <thead>
@@ -17,7 +17,10 @@
         <td><%= category.id %></td>
         <td><%= category.title %></td>
         <td><%= category.created_at %></td>
-        <td>a</td>
+        <td>
+          <%= link_to 'edit', [:edit, :admin, category], class: 'btn btn-info' %>
+          <%= link_to 'delete', [:admin, category], data: { method: :delete, confirm: 'Are you sure?'}, class: 'btn btn-danger' %>
+        </td>
       </tr>
     <% end %>
   </tbody>
