--- a/app/views/admin/categories/new.html.erb
+++ b/app/views/admin/categories/new.html.erb
@@ -1,5 +1,1 @@
-
-<%= simple_form_for [:admin, @category] do |f| %>
-  <%= f.input :title %>
-  <%= f.submit 'submit', class: 'btn btn-success' %>
-<% end %>
+<%= render 'form' %>
