--- a/app/views/shared/admin/_footer.html.erb
+++ b/app/views/shared/admin/_footer.html.erb
@@ -1,7 +1,4 @@
-<div class="row footer hidden-print">
-  <div class="col-sm-6 text">
-    <a class="btn btn-link" href="http://www.salias.cn" target="_blank">
-      Copyright © 2019 信息技术有限公司
-    </a>
-  </div>
-</div>
+
+<footer class='admin-footer'>
+  <p>Copyright © 2020 信息技术有限公司</p>
+</footer>
