tinymce use language

--- a/app/views/admin/articles/_form.html.erb
+++ b/app/views/admin/articles/_form.html.erb
@@ -11,7 +11,8 @@
 <% content_for :js do %>
   <script type="text/javascript">
     tinyMCE.init({
-      selector: 'textarea#article_content'
+      selector: 'textarea#article_content',
+      language: 'zh_CN'
     });
   </script>
 <% end %>
